[gd_scene load_steps=2 format=3 uid="uid://individual_enemy_panel_scene"]

[ext_resource type="Script" path="res://scripts/combat/components/IndividualEnemyPanel.gd" id="1_script"]

[node name="IndividualEnemyPanel" type="Panel"]
custom_minimum_size = Vector2(110, 120)
offset_right = 110.0
offset_bottom = 120.0
z_index = 15
mouse_filter = 0
script = ExtResource("1_script")

[node name="IconLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 37.0
offset_top = 6.0
offset_right = 73.0
offset_bottom = 42.0
mouse_filter = 2
theme_override_font_sizes/font_size = 30
text = "üë§"

[node name="DamageLabel" type="Label" parent="."]
layout_mode = 0
offset_top = 48.0
offset_right = 110.0
offset_bottom = 70.0
mouse_filter = 2
theme_override_colors/font_color = Color(1, 0.4, 0.4, 1)
theme_override_font_sizes/font_size = 14
text = "‚öî 5"
horizontal_alignment = 1

[node name="HPBackground" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 79.2
offset_right = 106.0
offset_bottom = 91.2
mouse_filter = 2
color = Color(0.1, 0.1, 0.1, 1)

[node name="HPFill" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 79.2
offset_right = 106.0
offset_bottom = 91.2
mouse_filter = 2
color = Color(0.2, 0.85, 0.2, 1)

[node name="HPText" type="Label" parent="."]
layout_mode = 0
offset_top = 93.6
offset_right = 110.0
offset_bottom = 113.6
mouse_filter = 2
theme_override_colors/font_color = Color(0.95, 0.95, 0.95, 1)
theme_override_font_sizes/font_size = 13
text = "100"
horizontal_alignment = 1

[node name="IntentIcon" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 88.0
offset_top = -12.0
offset_right = 110.0
offset_bottom = 6.0
mouse_filter = 2
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 18
text = "‚öîÔ∏è"

[node name="HexLabel" type="Label" parent="."]
visible = false
layout_mode = 0
offset_right = 110.0
offset_bottom = 22.0
mouse_filter = 2
theme_override_colors/font_color = Color(0.8, 0.3, 1, 1)
theme_override_font_sizes/font_size = 14
horizontal_alignment = 1

